fix: 🐛 add gap to history button

--- a/skinStyles/mediawiki/action/mediawiki.action.history.styles.less
+++ b/skinStyles/mediawiki/action/mediawiki.action.history.styles.less
@@ -15,6 +15,7 @@
 	align-items: center;
 	justify-content: space-between;
 	margin: var( --space-md ) 0;
+	gap: var( --space-xs );
 	font-size: 0.875rem;
 }
 
